--- a/Untitled.html
+++ b/Untitled.html
@@ -1,9 +1,9 @@
 <html>
 <head>
   <title>A Leaflet map!</title>
-  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
-  <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-  <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
+  <script src="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
  
 
   <style>
@@ -40,7 +40,6 @@ $.ajax({
        features = new ol.format.GeoJSON().readFeatures(response);
     }
 });
-
 var two;
 
 $.ajax({
