--- a/index.html
+++ b/index.html
@@ -22,11 +22,16 @@
     #map {
       height: 90vh;
     }
+    table, th,td{
+      border: 1px solid black;
+      border-collapse: collapse;
+      padding: 10px;
+
+    }
   </style>
 </head>
 
 <body>
-  
   {% set base = '.' %}
   {% include template-navbar.html %}
   <!-- TODO: Filter bars -->
@@ -37,66 +42,92 @@
       </div>
       <div class="sidebar">
         <script>
-        var dropDownMenu = document.getElementById("CrimeTypes");
-        dropDownMenu.addEventListener("change", generateData);
-        
-        function generateData(event) {
-          if (dropDownMenu.value == 'Petit Larcency') {
-            alert(1);
-          } else if (dropDownMenu.value == 'Grand Larcency') {
-            alert(2);
-          } else if (dropDownMenu.value == 'Misd. Assault') {
-            alert(3);
+        function drawStuff(menu) {//drop down menu
+            if (menu.value == 'Petit Larcency') {
+              //do something
+              alert(1)
+            } else if (menu.value == 'Grand Larcency') {
+            //changes map->
+            $.ajax({
+                    url: 'one.geojson',
+                    dataType: "json",
+                    success: function (data) {
+                      $.getJSON('data', function(crimedata){
+                        var values = crimedata.map(d => d.top5CrimeByPrecWTD);
+                        var ScaleGener = d3.scaleLinear()
+                                            .domain([d3.min(values), d3.mean(values), d3.max(values)])
+                                            .range(['green', 'yellow', 'red']);
+                        L.geoJson(data, {
+                          style: function (feature){
+                            var p_val = crimedata.filter(d => d.precinct == feature.properties.precinct)
+                            p_val = p_val.length > 0 ? ScaleGener(p_val[0].top5CrimeByPrecWTD) : "#000";
+                            return {
+                              fillColor: p_val,
+                              weight: 2,
+                              opacity: 1,
+                              color: 'white',
+                              fillOpacity: 0.5
+                            };
+                          },
+                          onEachFeature: onEachFeature
+                        }).addTo(map)
+                      })
+                    },
+                    }
+                  )              
+            //Adds Table to go With it
+            $.ajax({
+                url: 'MostCrimeinEachPrecinct.csv',
+                dataType: 'text',
+                error: function(req, err){ console.log('my message' + err)}}).done(successFunction);
+            } else if (menu.value == 'Misd. Assault') {
+              //do something
+              alert(3)
+            }
           }
-        }
         </script>
           <label for="CrimeTypes">Select a Crime type:</label>
-          <select id="CrimeTypes">
+          <select id="CrimeTypes" onchange="drawStuff(this)">
           <option value="Petit Larcency">Petit Larcency</option>
           <option value="Grand Larcency">Grand Larcency</option>
-          <option value="Misd. Assault">Misd. Assault</option>
-        </select>
-        <script>
-        $.ajax({
-            url: 'MostCrimeinEachPrecinct.csv',
-            dataType: 'text',}).done(successFunction).css( 'background-color', dateToColor(data[2]));
-    function successFunction(data) {
-        var allRows = data.split(/\r?\n|\r/);
-        var table = '<table>';
-        for (var singleRow = 0; singleRow < allRows.length; singleRow++) {
-          if (singleRow === 0) {
-            table += '<thead>';
-            table += '<tr>';
-          } else {
-            table += '<tr>';
-          }
-          var rowCells = allRows[singleRow].split(',');
-          for (var rowCell = 0; rowCell < rowCells.length; rowCell++) {
-            if (singleRow === 0) {
-              table += '<th>';
-              table += rowCells[rowCell];
-              table += '</th>';
-            } else {
-              table += '<td>';
-              table += rowCells[rowCell];
-              table += '</td>';}}
-          if (singleRow === 0) {
-            table += '</tr>';
-            table += '</thead>';
-            table += '<tbody>';} 
-          else {
-            table += '</tr>';
-          }
-        } 
-        table += '</tbody>';
-        table += '</table>';
-        $('body').append(table);
-      }
-        </script>
-        
-      </div>
+          <option value="Misd. Assault">Misd. Assault</option></select>
+        <script>//Creates Data into Table
+            function successFunction(data) {
+                var allRows = data.split(/\r?\n|\r/);
+                var table = '<table>';
+                for (var singleRow = 0; singleRow < allRows.length; singleRow++) {
+                  if (singleRow === 0) {
+                    table += '<thead>';
+                    table += '<tr>';
+                  } else {
+                    table += '<tr>';
+                  }
+                  var rowCells = allRows[singleRow].split(',');
+                  for (var rowCell = 0; rowCell < rowCells.length; rowCell++) {
+                    if (singleRow === 0) {
+                      table += '<th>';
+                      table += rowCells[rowCell];
+                      table += '</th>';
+                    } else {
+                      table += '<td>';
+                      table += rowCells[rowCell];
+                      table += '</td>';}}
+                  if (singleRow === 0) {
+                    table += '</tr>';
+                    table += '</thead>';
+                    table += '<tbody>';} 
+                  else {
+                    table += '</tr>';
+                  }
+                } 
+                table += '</tbody>';
+                table += '</table>';
+                $('body').append(table);
+              }
+                </script>
     </div>
   </div><!-- .container-fluid -->
+</div>
   <script src="ui/jquery/dist/jquery.min.js"></script>
   <script src="ui/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="ui/lodash/lodash.min.js"></script>
@@ -135,33 +166,7 @@
         'orange';
     }
 
-    var one = $.ajax({
-      url: 'one.geojson',
-      dataType: "json",
-      success: function (data) {
-        $.getJSON('data', function(crimedata){
-          var values = crimedata.map(d => d.top5CrimeByPrecWTD);
-          var ScaleGener = d3.scaleLinear()
-                              .domain([d3.min(values), d3.mean(values), d3.max(values)])
-                              .range(['green', 'yellow', 'red']);
-          L.geoJson(data, {
-            style: function (feature){
-              var p_val = crimedata.filter(d => d.precinct == feature.properties.precinct)
-              p_val = p_val.length > 0 ? ScaleGener(p_val[0].top5CrimeByPrecWTD) : "#000";
-              return {
-                fillColor: p_val,
-                weight: 2,
-                opacity: 1,
-                color: 'white',
-                fillOpacity: 0.5
-              };
-            },
-            onEachFeature: onEachFeature
-          }).addTo(map)
-        })
-      },
-      }
-    )
+
 
     // min & max of crime data
     // d3.js color them dynamiccally - skip this
