--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     #map {
       height: 90vh;
     }
-    table, th,td{
+
+    table,
+    th,
+    td {
       border: 1px solid black;
       border-collapse: collapse;
       padding: 10px;
@@ -37,105 +40,54 @@
   <!-- TODO: Filter bars -->
   <div class="container-fluid py-4">
     <div class="row">
+      <div class="col-md-13">
+        <div class="sidebar">
+          <label for="CrimeTypes">Select a Crime type:</label>
+          <select id="CrimeTypes" onchange="drawStuff(this)">
+            <option value="Petit Larcency">Petit Larcency</option>
+            <option value="Grand Larcency">Grand Larcency</option>
+            <option value="Misd. Assault">Misd. Assault</option>
+          </select>
+        </div>
+      </div>
+    </div>
+    <div class="row">
       <div class="col-md-6">
         <div id="map"></div>
       </div>
-      <div class="sidebar">
-        <script>
-        function drawStuff(menu) {//drop down menu
-            if (menu.value == 'Petit Larcency') {
-              //do something
-              alert(1)
-            } else if (menu.value == 'Grand Larcency') {
-            //changes map->
-            $.ajax({
-                    url: 'one.geojson',
-                    dataType: "json",
-                    success: function (data) {
-                      $.getJSON('data', function(crimedata){
-                        var values = crimedata.map(d => d.top5CrimeByPrecWTD);
-                        var ScaleGener = d3.scaleLinear()
-                                            .domain([d3.min(values), d3.mean(values), d3.max(values)])
-                                            .range(['green', 'yellow', 'red']);
-                        L.geoJson(data, {
-                          style: function (feature){
-                            var p_val = crimedata.filter(d => d.precinct == feature.properties.precinct)
-                            p_val = p_val.length > 0 ? ScaleGener(p_val[0].top5CrimeByPrecWTD) : "#000";
-                            return {
-                              fillColor: p_val,
-                              weight: 2,
-                              opacity: 1,
-                              color: 'white',
-                              fillOpacity: 0.5
-                            };
-                          },
-                          onEachFeature: onEachFeature
-                        }).addTo(map)
-                      })
-                    },
-                    }
-                  )              
-            //Adds Table to go With it
-            $.ajax({
-                url: 'MostCrimeinEachPrecinct.csv',
-                dataType: 'text',
-                error: function(req, err){ console.log('my message' + err)}}).done(successFunction);
-            } else if (menu.value == 'Misd. Assault') {
-              //do something
-              alert(3)
-            }
-          }
+      <div class="col-md-6" id="datatable">
+        <script type="text/html" class="datatable">
+          <% var _headers = Object.keys(data[0]) %>
+          <table class="table">
+            <thead>
+              <tr>
+                <% _.each(_headers, function(d){ %>
+                <th><%= d%></th>
+                <% }) %>
+              </tr>
+            </thead>
+            <tbody>
+              <% _.each(data, function(d){ %>
+              <tr>
+                <% _.each(_headers, function(h){ %>
+                <td><%= d[h]%></td>
+                <% })%>
+              </tr>
+              <% }) %>
+            </tbody>
+          </table>
         </script>
-          <label for="CrimeTypes">Select a Crime type:</label>
-          <select id="CrimeTypes" onchange="drawStuff(this)">
-          <option value="Petit Larcency">Petit Larcency</option>
-          <option value="Grand Larcency">Grand Larcency</option>
-          <option value="Misd. Assault">Misd. Assault</option></select>
-        <script>//Creates Data into Table
-            function successFunction(data) {
-                var allRows = data.split(/\r?\n|\r/);
-                var table = '<table>';
-                for (var singleRow = 0; singleRow < allRows.length; singleRow++) {
-                  if (singleRow === 0) {
-                    table += '<thead>';
-                    table += '<tr>';
-                  } else {
-                    table += '<tr>';
-                  }
-                  var rowCells = allRows[singleRow].split(',');
-                  for (var rowCell = 0; rowCell < rowCells.length; rowCell++) {
-                    if (singleRow === 0) {
-                      table += '<th>';
-                      table += rowCells[rowCell];
-                      table += '</th>';
-                    } else {
-                      table += '<td>';
-                      table += rowCells[rowCell];
-                      table += '</td>';}}
-                  if (singleRow === 0) {
-                    table += '</tr>';
-                    table += '</thead>';
-                    table += '<tbody>';} 
-                  else {
-                    table += '</tr>';
-                  }
-                } 
-                table += '</tbody>';
-                table += '</table>';
-                $('body').append(table);
-              }
-                </script>
-    </div>
-  </div><!-- .container-fluid -->
-</div>
+      </div>
+    </div><!-- .container-fluid -->
+  </div>
   <script src="ui/jquery/dist/jquery.min.js"></script>
   <script src="ui/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="ui/lodash/lodash.min.js"></script>
+  <script src="ui/g1/dist/g1.min.js"></script>
   <script src="ui/d3v5/dist/d3.min.js"></script>
 
   <!-- Commonly used libraries:
   <script src="ui/morphdom/dist/morphdom-umd.min.js"></script>
-  <script src="ui/g1/dist/g1.min.js"></script>
   <script src="ui/dayjs/dayjs.min.js"></script>
   <script src="ui/daterangepicker/daterangepicker.js"></script>
   <script src="ui/leaflet/dist/leaflet.js"></script>
@@ -205,6 +157,47 @@
         return 'Queens'
       if (123 >= d && d >= 120)
         return 'Staten Island'
+    }
+
+    function drawStuff(menu) { //drop down menu
+      if (menu.value == 'Petit Larcency') {
+        //do something
+        alert(1)
+      } else if (menu.value == 'Grand Larcency') {
+        //changes map->
+        $.ajax({
+          url: 'one.geojson',
+          dataType: "json",
+          success: function (data) {
+            $.getJSON('data', function (crimedata) {
+              $('script.datatable').template({
+                data: crimedata
+              })
+              var values = crimedata.map(d => d.top5CrimeByPrecWTD);
+              var ScaleGener = d3.scaleLinear()
+                .domain([d3.min(values), d3.mean(values), d3.max(values)])
+                .range(['green', 'yellow', 'red']);
+              L.geoJson(data, {
+                style: function (feature) {
+                  var p_val = crimedata.filter(d => d.precinct == feature.properties.precinct)
+                  p_val = p_val.length > 0 ? ScaleGener(p_val[0].top5CrimeByPrecWTD) : "#000";
+                  return {
+                    fillColor: p_val,
+                    weight: 2,
+                    opacity: 1,
+                    color: 'white',
+                    fillOpacity: 0.5
+                  };
+                },
+                onEachFeature: onEachFeature
+              }).addTo(map)
+            })
+          },
+        })
+      } else if (menu.value == 'Misd. Assault') {
+        //do something
+        alert(3)
+      }
     }
   </script>
 </body>
